--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,14 +48,20 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation("androidx.compose:compose-runtime:$compose_version")
     implementation("androidx.ui:ui-core:${compose_version}")
-    implementation("androidx.ui:ui-rxjava2:${compose_version}")
     implementation("androidx.ui:ui-framework:$compose_version")
     implementation("androidx.ui:ui-foundation:$compose_version")
     implementation "androidx.ui:ui-tooling:$compose_version"
     implementation("androidx.ui:ui-layout:$compose_version")
     implementation("androidx.ui:ui-material:$compose_version")
     implementation("androidx.ui:ui-animation:$compose_version")
+    implementation("androidx.ui:ui-livedata:${compose_version}")
+    implementation("androidx.ui:ui-rxjava2:${compose_version}")
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.4'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
