--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".rxjava.RxJavaActivity" />
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".viewmodel.ExpenseAppActivity" />
+        <activity android:name="com.detroitlabs.composeplayground.counter.livedata.LiveDataCounterActivity" />
+        <activity android:name="com.detroitlabs.composeplayground.counter.rxjava.RxJavaCounterActivity" />
         <activity
-            android:name=".default.MainActivity"
+            android:name=".launcher.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
