--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,26 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.detroitlabs.composeplayground">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".expenseapp.ExpenseAppActivity" />
-        <activity android:name="com.detroitlabs.composeplayground.counter.livedata.LiveDataCounterActivity" />
-        <activity android:name="com.detroitlabs.composeplayground.counter.rxjava.RxJavaCounterActivity" />
-        <activity
-            android:name=".launcher.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+  <application
+      android:allowBackup="true"
+      android:icon="@mipmap/ic_launcher"
+      android:label="@string/app_name"
+      android:roundIcon="@mipmap/ic_launcher_round"
+      android:supportsRtl="true"
+      android:theme="@style/AppTheme.NoActionBar">
+    <activity android:name=".expenseapp.ExpenseAppActivity" />
+    <activity android:name="com.detroitlabs.composeplayground.counter.livedata.LiveDataCounterActivity" />
+    <activity android:name="com.detroitlabs.composeplayground.counter.rxjava.RxJavaCounterActivity" />
+    <activity
+        android:name=".launcher.MainActivity"
+        android:label="@string/app_name">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+  </application>
 
 </manifest>
